--- a/08-Start-Building.Rmd
+++ b/08-Start-Building.Rmd
@@ -3,8 +3,8 @@
 ## Next Steps
 
 We've reached the end of this book, which means that you now have a formidable
-foundation in using Unix. Congratulations! As the title of this book suggests
-Unix serves mostly as a workbench - a set of tools for building amazing digital
+foundation in using Unix. Congratulations! As the title of this book suggests,
+Unix serves mostly as a workbench — a set of tools for building amazing digital
 creations. However, what you can create with Unix is usually not made out of
 Unix's constituent parts. You might use a hammer and saw to build a good
 birdhouse, but the birdhouse itself isn't made out of hammers. Working knowledge
@@ -15,24 +15,24 @@ programming education.
 [**Python**](https://www.python.org/) is an approachable and essential language
 for anyone interested in computing. If you don't have any programming experience
 outside of this book, I very highly recommend learning Python. My favorite book
-on the subject is [Learn Python the Hard Way](https://learnpythonthehardway.org/book/)
+on the subject is [Learn Python the Hard Way](https://learnpythonthehardway.org/book/),
 by Zed Shaw. Philip Guo's [Python Tutor](http://pythontutor.com/) allows you to
-visualize how Python is working under-the-hood, which allows you to develop a
+visualize how Python is working under the hood, which allows you to develop a
 better intuition about the code you're writing. The pairing of those two
 resources is currently the best way to learn how to write software outside of
-formal university or corporate training. Once you have some Python experience
+formal university or corporate training. Once you have some Python experience,
 you can try building your own HTTP API with [Flask](http://flask.pocoo.org/).
 
-[**R**](https://www.r-project.org/) is a general purpose programming language
+[**R**](https://www.r-project.org/) is a general-purpose programming language
 designed for folks who are interested in data science, analysis, modeling, and
 visualization. R is also fantastic for making digital documents: this book was
-created with R! If you want to get started with R I recommend the book 
+created with R! If you want to get started with R, I recommend the book 
 [R Programming for Data Science](https://leanpub.com/rprogramming), the
 [Swirl](http://swirlstats.com/) software package, and the interactive R
 tutorial website called [DataCamp](https://www.datacamp.com/).
 
 [**JavaScript**](https://developer.mozilla.org/en-US/docs/Web/JavaScript) is 
-the main language that powers the internet and it forms the backbone of web
+the main language that powers the internet, and it forms the backbone of web
 application programming. The Mozilla Development Network has 
 [wonderful tutorials](https://developer.mozilla.org/en-US/docs/Web/Tutorials)
 about HTML, CSS, and JavaScript. Usually you use JavaScript to manipulate
@@ -43,27 +43,27 @@ Unix.
 ## Giving Feedback
 
 Thank you so much for reading this book! If you'd like to discuss the book or
-you have any feedback I would love to hear from you. The best way to contact me
+you have any feedback, I would love to hear from you. The best way to contact me
 is [on Twitter](https://twitter.com/seankross).
 
-Now that you know how to use Git and GitHub you can submit changes that you
-think should be made to this book including fixing typos and correcting errors.
+Now that you know how to use Git and GitHub, you can submit changes that you
+think should be made to this book, including fixing typos and correcting errors.
 You can find the repository for this book
 [here](https://github.com/seankross/the-unix-workbench). Fork the repository,
 and make your changes to the appropriate `.Rmd` file (just treat it like a
 regular Markdown file). Add, commit, and push your changes, then send me a pull
-request! While you're on the GitHub if you wouldn't mind giving this book's
-repository a [**Star**](https://github.com/seankross/the-unix-workbench) I 
-would really appreciate it so that others can find this book more easily.
+request! While you're on the GitHub, if you wouldn't mind giving this book's
+repository a [**Star**](https://github.com/seankross/the-unix-workbench), I 
+would really appreciate it, so that others can find this book more easily.
 
 ## Using this Book
 
 This book is released under a [CC0](https://creativecommons.org/publicdomain/zero/1.0/) 
 license, meaning that it is dedicated to the public domain. If you think this
 book is worth paying for or you want to support the creation of more open source 
-educational materials then consider buying the book 
-on [Leanpub](https://leanpub.com/unix) where you are free to pay 
+educational materials, then consider buying the book 
+on [Leanpub](https://leanpub.com/unix), where you are free to pay 
 what you want, or send me a few dollars via [PayPal](https://www.paypal.me/seankross/5).
 
-If you use this book as part of a course or in any other setting please let me
+If you use this book as part of a course or in any other setting, please let me
 know!
